cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable(setrange1 "setrange1.cpp")
set_property(TARGET setrange1 PROPERTY CXX_STANDARD 11)

add_executable(set1 "set1.cpp")
set_property(TARGET set1 PROPERTY CXX_STANDARD 11)

add_executable(multiset1 "multiset1.cpp")
set_property(TARGET set1 PROPERTY CXX_STANDARD 11)
